# plato-dcs

./: BUILD.md  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/plato_dcs/: __init__.py  dcs.py
src/plato_dcs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
